# ai-agents

lekce_1/: main.py  pyproject.toml
lekce_9/: .env.example  main.py  mcp_server.py  pyproject.toml
